use exception expectations
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/lang/trunk@1147510 13f79535-47bb-0310-9956-ffa450edef68